...
    sfSymbol: 'checklist',
    androidIconKey: 'tasks',
    icon: CheckSquare,
  },
  {
    name: 'profile',
    title: 'Profile',
    sfSymbol: 'person.fill',
    androidIconKey: 'profile',
    icon: User,
  },
];

...
